# pokemonpy-package

./: README.md  log.md  pyproject.toml
src/pokemonpy/: __init__.py  base_pokemon.py  moves.py  pokemon.py  saved_dexpoke.npy  saved_movedex.npy  trainerai.py  victoryroad.py
src/pokemonpy/configurations/: config.txt
src/pokemonpy/documentation/: game_blurb.md
