[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokemonpy"
version = "0.0.0"
authors = [
  { name="Antoine" },
]
description = "A package that contains a Pokémon simulation game."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=1.26.4"
]

[project.urls]
Homepage = "https://github.com/4ntoined/pokemonpy-package"
Issues = "https://github.com/4ntoined/pokemonpy-package/issues"

